deploy/base/namespace-devcontainers.yaml
# namespace-devcontainers.yml

---
apiVersion: v1
kind: Namespace
metadata:
  name: devcontainers
  labels:
    name: devcontainers
