deploy/base/namespace.devcontainer.yaml
# namespace.devcontainer.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: devcontainer
  labels:
    name: devcontainer
