deploy/base/namespace.devpod.yaml
# namespace.devpod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devpod
  labels:
    name: devpod
