deploy/base/deployment.hello-whale.yaml
# deployment.hello-whale.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-whale
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-whale
  template:
    metadata:
      name: hello-whale
      labels:
        app: hello-whale
        version: blue
    spec:
      containers:
      - name: hello-whale-container
        image: vamsijakkula/hello-blue-whale:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
