deploy/base/pod-puppet-focal.yaml
# pod-puppet-focal.yml

---
apiVersion: v1
kind: Pod
metadata:
  namespace: devcontainers
  name: pod-puppet-focal
  labels:
    name: devcontainer
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
  containers:
  - image: mcr-devcontainer-focal-puppet
    # https://kubernetes.io/docs/concepts/containers/images/#image-pull-policy
    imagePullPolicy: Never
    name: container-puppet
    # https://github.com/kubernetes/kubernetes/issues/34982
    lifecycle:
        postStart:
          exec:
            command:
            - /usr/bin/bash
            - -c
            - /usr/bin/mkdir -p /home/vscode/.ssh && /usr/bin/chmod 700 /home/vscode/.ssh && /usr/bin/cp -aL /home/vscode/.ssh-egress/* /home/vscode/.ssh && /usr/bin/chmod 600 /home/vscode/.ssh/id_rsa && /usr/bin/chmod 644 /home/vscode/.ssh/known_hosts /home/vscode/.ssh/id_rsa.pub
    securityContext:
      runAsUser: 1000
      runAsGroup: 1000
    command: ["tail", "-f", "/dev/null"]
    volumeMounts:
      - mountPath: /workspace
        name: code-volume
      - mountPath: /home/vscode/.cache
        name: cache-volume
        readOnly: true
      - name: ssh-egress
        # https://github.com/kubernetes/kubernetes/issues/34982
        mountPath: "/home/vscode/.ssh-egress"
        readOnly: true
      - name: eyaml-keys
        # https://github.com/kubernetes/kubernetes/issues/34982
        mountPath: "..." # placeholder
        readOnly: true
      - name: r10k-config
        mountPath: "/etc/puppetlabs/r10k/r10k.yaml"
        readOnly: true
    resources:
      limits:
        memory: 2048Mi
        cpu: "1"
      requests:
        memory: 1024Mi
        cpu: "1"
  volumes:
    - name: code-volume
      hostPath:
        # LINUX/MACOS: location of repo on the host we're launching from:
        path: .
        # WINDOWS: it's COMPLICATED:
        # - bind mount on the WSL2 image:
        #    sudo mount --bind /blah/blah/dbwriter_python /mnt/wsl/dbwriter_python
        # - this maps to:
        #   /run/desktop/mnt/host/wsl/... for docker and kubernetes
        #   see https://github.com/docker/for-win/issues/5325#issuecomment-567594291
        #   (on docker-desktop wsl2 image, I can only see it as /mnt/host/wsl/... )
        #path: /run/desktop/mnt/host/wsl/dbwriter_python
        # this field is optional
        type: Directory
    - name: cache-volume
      # https://kubernetes.io/docs/concepts/storage/volumes/#emptydir
      # same as lifetime of the pod; OK for caching of package installs and so on
      emptyDir: {}       
    - name: ssh-egress
      secret:
        secretName: ssh-egress
        defaultMode: 0600
        items:
        - key: id_rsa
          path: id_rsa
        - key: id_rsa.pub
          path: id_rsa.pub
        - key: known_hosts
          path: known_hosts
    - name: eyaml-keys
      secret:
        secretName: eyaml-keys
        defaultMode: 0640
        items:
        - key: private_key.pkcs7.pem
          path: private_key.pkcs7.pem
        - key: public_key.pkcs7.pem
          path: public_key.pkcs7.pem
    - name: r10k-config
      configMap:
        name: r10k-config
