deploy/base/ingress.hello-whale_OLD.yaml
# ingress.hello-world.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-whale
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "traefik"  
    cert-manager.io/issuer: "letsencrypt-prod" 
spec:
  tls:
  - hosts:
    - bf40-122-169-232-77.ngrok.io
    secretName: bf40-122-169-232-77.ngrok.io
  rules:
  - host: bf40-122-169-232-77.ngrok.io
    http:
      paths:
      - path: /blue/(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-blue-whale-svc
            port:
              number: 80
