deploy/base/ingress.ngrok.yaml
# ingress.ngrok.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ngrok
  namespace: kube-system
spec:
  rules:
  - host: ngrok.rybamarine.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ngrok
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - ngrok.rybamarine.com
    secretName: ngrok-cert # < cert-manager will store the created certificate in this secret.
